# django-pdm-startproject

./: .pre-commit-config.yaml  README.md  pyproject.toml
