[project]
name = "{{project_name}}"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Oliver Andrich", email = "oliver@andrich.me"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "django<5.0,>=4.1",
    "django-click<3.0.0,>=2.3.0",
    "django-environ<1.0.0,>=0.10.0",
    "django-health-check<4.0.0,>=3.17.0",
    "django-htmx<2.0.0,>=1.13.0",
    "django-ninja<1.0.0,>=0.21.0",
    "django-tailwind-cli<2.0.0,>=1.1.0",
    "psutil<6.0.0,>=5.9.4",
    "pytz<2023.0.0,>=2022.7.1",
    "whitenoise<7.0.0,>=6.3.0",
]

[project.urls]

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "django-browser-reload>=1.7.0",
    "django-test-plus>=2.2.1",
    "django-types>=0.17.0",
    "ipdb>=0.13.13",
    "model-bakery>=1.10.1",
    "pre-commit>=3.2.0",
    "pytest>=7.2.2",
    "pytest-cov>=4.0.0",
    "pytest-django>=4.5.2",
    "pytest-randomly>=3.12.0",
    "pytest-timeout>=2.1.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "--cov --nomigrations --reuse-db"
DJANGO_SETTINGS_MODULE = "config.settings"
norecursedirs = ".git* assets templates"
python_files = "tests.py test_*.py"

[tool.coverage.run]
omit = [
    "*/admin.py",
    "*/manage.py",
    "*/migrations/*",
    "*/tests/*",
    "conftest.py",
]

[tool.ruff]
select = ["A", "B", "C4", "E", "F", "I", "DJ", "INP", "TID", "UP", "YTT"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C4", "E", "F", "I", "TID", "UP"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".hg",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "migrations",
    "node_modules",
    "static",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
